Fixed the next page button so it doesn't overlap the text.

--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,11 @@ p {
 }
 
 #next-page-button {
-    position: absolute;
-    right: 50px;
-    bottom: 50px;
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: 15px;
 }
 
 /* for any images in narrative page */
